<resources>
    <string name="app_name">My Application</string>
    <string name="nameTextView">City</string>
    <string name="weatherInfo">weather</string>
    <string name="imageViewSample">Image of the weather</string>
    <string name="temperatureText">temperature</string>
    <string name="pressureText">pressure</string>
    <string name="humidityText">humidity</string>
    <string name="favouritebutton">Add</string>
    <string name="addInFavourite">Add to favourite</string>
    <string name="tempFiveDays">Temperature for 5 days</string>
    <string name="humidityForFiveDays">Humidity for 5 days</string>
    <string name="cityNameView">City</string>
    <string name="cityTempTextView">Temperature</string>
    <string name="windSpeedTextView">wind speed</string>
    <string name="humidityTextView">humidity</string>
    <string name="pressureTextView">pressure</string>
    <string name="searchTitle">Search</string>
    <string name="landscapeStartImage">Landscape</string>
    <string name="modeViewId">Easter Egg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkWeatherYandex">Check weather on Yandex</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>