<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cityWeatherFrameID"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="myContainer"
    tools:context=".CityWeatherDescription">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/cityMainLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        android:isScrollContainer="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/cityWeatherDataLayout"
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/drops"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cityNameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:text="@string/cityNameView"
                android:textColor="#121111"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/cityTempTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/cityTempTextView"
                android:textColor="#0B0A0A"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/humidityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/humidityTextView"
                android:textColor="#070707"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/pressureTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/pressureTextView"
                android:textColor="#171616"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/windSpeedTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/windSpeedTextView"
                android:textColor="#131313"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tempFiveDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:shadowColor="#000000"
                android:text="@string/tempFiveDays"
                android:textColor="#040303"
                android:textSize="18sp" />

            <!--   <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

                 <TextView
                      android:id="@+id/textView15"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="Temp"
                      android:textSize="16sp" />

                  <TextView
                      android:id="@+id/textView16"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="Temp"
                      android:textSize="16sp" />

                  <TextView
                      android:id="@+id/textView17"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="Temp"
                      android:textSize="16sp" />

                  <TextView
                      android:id="@+id/textView18"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="Temp"
                      android:textSize="16sp" />

                  <TextView
                      android:id="@+id/textView19"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="Temp"
                      android:textSize="16sp" />

            </LinearLayout>  -->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weatherRecyleViewFiveDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/humidityForFiveDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/humidityForFiveDays"
                android:textColor="#0B0A0A"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Humidity"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Humidity"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Humidity"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Humidity"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Humidity"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/modeViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/modeViewId"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/toggleID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Switch" />

            <Button
                android:id="@+id/checkWeatherYandex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/checkWeatherYandex"

                />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleX="1"
                android:scaleY="1"
                app:srcCompat="@drawable/moscow" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>